# 

h_sources = 

c_sources = netevent.c


library_includedir=$(includedir)/$(GENERIC_LIBRARY_NAME)-$(GENERIC_API_VERSION)/$(GENERIC_LIBRARY_NAME)
library_include_HEADERS = netevent.h

library_CFLAGS =  

lib_LTLIBRARIES= libsomanetevent-1.0.la
libsomanetevent_1_0_la_SOURCES= $(h_sources) $(c_sources)
libsomanetevent_1_0_la_CFLAGS= 
libsomanetevent_1_0_la_LDFLAGS= -version-info $(GENERIC_LIBRARY_VERSION) -release $(GENERIC_RELEASE)
